--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <!-- ------------ Testimonials ------------ -->
 <!-- new features -->
 <section class="testimonials">
-    <h1>What Our Allumni Says</h1>
+    <h1>Message from Our Alumni</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     <div class="row">
         <div class="testimonial-col">
